--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,29 @@
 spring:
   application:
     name: vibeapp
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:./data/testdb
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: com.example.vibeapp.post
+  configuration:
+    map-underscore-to-camel-case: true
+
+logging:
+  file:
+    name: ./logs/app.log
+  level:
+    org.springframework.boot.autoconfigure: debug
+
 server:
   port: 8080
+
+debug: true
